<resources>
    <string name="app_name">CRUD</string>
    <string name="action_settings">Settings</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="marks">Marks:</string>
    <string name="deleteBtnName">Delete</string>
    <string name="updateBtnName">Update</string>
    <string name="viewBtnName">View</string>
    <string name="searchBtnName">Details</string>
    <string name="addBtnName">Add</string>
    <string name="name">CRUD</string>
    <string name="label">Please provide the id:</string>
    <string name="deleteId">ID</string>

</resources>
